@@ -104,6 +104,8 @@ VERSION 2.2-beta1
   BUGFIXES:
     * Fixed track queuing when the playlist uses a random track progression.
       (BR 194328)
+    * Fixed issue where files or folders with the same name but different case
+      sensitivity were not scanned and/or retained. (BR 197384)
     * Improved Amarok 1.4 import. Patch thanks to Michael Reiher <redm@gmx.de>.
     * Improved performance and decreased memory usage when loading music shares
       (DAAP collections). Patch thanks to Duns <dunsens@web.de>. (BR 173048)
